// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`js-in-xxx > should format .vue with sort-imports and sort-tailwindcss 1`] = `
"--- FILE -----------
app.vue
--- BEFORE ---------
<script setup lang="ts">
import z from "z";
import a from "a";
import m from "m";

const count = ref(0);
</script>
<template>
  <div class="p-4 flex m-0">{{ count }}</div>
  <button class="m-2 p-1 flex">Click</button>
</template>

--- AFTER ----------
<script setup lang="ts">
  import a from "a";
  import m from "m";
  import z from "z";

  const count = ref(0);
</script>
<template>
  <div class="m-0 flex p-4">{{ count }}</div>
  <button class="m-2 flex p-1">Click</button>
</template>

--------------------"
`;

exports[`js-in-xxx > should format multiple <script> tags with semi: false 1`] = `
"--- FILE -----------
multi-script.vue
--- BEFORE ---------
<script lang="ts">
import z from "z";
import a from "a";

export default { name: "App" };
</script>
<script setup lang="ts">
import m from "m";
import b from "b";

const count = ref(0);
</script>
<template>
  <div>{{ count }}</div>
</template>

--- AFTER ----------
<script lang="ts">
  import a from "a"
  import z from "z"

  export default { name: "App" }
</script>
<script setup lang="ts">
  import b from "b"
  import m from "m"

  const count = ref(0)
</script>
<template>
  <div>{{ count }}</div>
</template>

--------------------"
`;

exports[`js-in-xxx > should handle v-for, v-slot, generic attributes correctly 1`] = `
"--- FILE -----------
vue-directives.vue
--- BEFORE ---------
<!-- Case: __isEmbeddedTypescriptGenericParameters -->
<script setup lang="ts" generic="T extends Record<string  ,   unknown>, U">
import B from "./b.vue";
import { defineComponent } from "vue";
import { Route } from "router";

// Case: __isVueBindings (defineProps/defineEmits)
const { foo,
  bar } = defineProps<{ foo: string;    bar: number }>();
const emit = defineEmits<{ change:
  [value: T] }>();

// oxfmt-ignore
const x =                 1;
</script>

<template>
  <ul>
    <!-- Case: __isVueForBindingLeft (v-for) -->
    <li v-for="item in    items" :key="item.id">
      {{ item.name }}
    </li>
    <li v-for="(item,    index) in items" :key="index">
      {{ index }}: {{ item.name }}
    </li>
    <li v-for="{ id, name     } in items" :key="id">
      {{ name }}
    </li>
    <li v-for="(value, key,     index) in object" :key="key">
      {{ index }}: {{ key }} = {{ value }}
    </li>
    <!-- Case: __isInHtmlAttribute (string literals in v-for) -->
    <li v-for="{ name = 'default'   } in items" :key="name">
      {{ name }}
    </li>

    <!-- Case: __isVueBindings (v-slot) -->
    <MyComponent v-slot="{ item,      index }">
      {{ item }}
    </MyComponent>
    <MyComponent>
      <template #default="{       data }">
        {{ data }}
      </template>
      <template #header="props    ">
        {{ props.title }}
      </template>
    </MyComponent>
    <!-- Case: __isInHtmlAttribute (string literals in v-slot) -->
    <MyComponent v-slot="{ label =    'test' }">
      {{ label }}
    </MyComponent>

    <!-- These should be OK (expression parsers) -->
    <div v-if="condition&&anotherCondition">v-if</div>
    <div v-show="isVisible   ">v-show</div>
    <div :class="{ active:          isActive }">v-bind</div>
    <button @click="handleClick($event          )">v-on</button>
  </ul>
</template>

--- AFTER ----------
<!-- Case: __isEmbeddedTypescriptGenericParameters -->
<script setup lang="ts" generic="T extends Record<string, unknown>, U">
  import { Route } from "router";
  import { defineComponent } from "vue";

  import B from "./b.vue";

  // Case: __isVueBindings (defineProps/defineEmits)
  const { foo, bar } = defineProps<{ foo: string; bar: number }>();
  const emit = defineEmits<{ change: [value: T] }>();

  // oxfmt-ignore
  const x =                 1;
</script>

<template>
  <ul>
    <!-- Case: __isVueForBindingLeft (v-for) -->
    <li v-for="item in items" :key="item.id">
      {{ item.name }}
    </li>
    <li v-for="(item, index) in items" :key="index">{{ index }}: {{ item.name }}</li>
    <li v-for="{ id, name } in items" :key="id">
      {{ name }}
    </li>
    <li v-for="(value, key, index) in object" :key="key">{{ index }}: {{ key }} = {{ value }}</li>
    <!-- Case: __isInHtmlAttribute (string literals in v-for) -->
    <li v-for="{ name = 'default' } in items" :key="name">
      {{ name }}
    </li>

    <!-- Case: __isVueBindings (v-slot) -->
    <MyComponent v-slot="{ item, index }">
      {{ item }}
    </MyComponent>
    <MyComponent>
      <template #default="{ data }">
        {{ data }}
      </template>
      <template #header="props">
        {{ props.title }}
      </template>
    </MyComponent>
    <!-- Case: __isInHtmlAttribute (string literals in v-slot) -->
    <MyComponent v-slot="{ label = 'test' }">
      {{ label }}
    </MyComponent>

    <!-- These should be OK (expression parsers) -->
    <div v-if="condition && anotherCondition">v-if</div>
    <div v-show="isVisible">v-show</div>
    <div :class="{ active: isActive }">v-bind</div>
    <button @click="handleClick($event)">v-on</button>
  </ul>
</template>

--------------------"
`;
